2008.11.08: David Nichols
	* updated QoreSocket API to use qore_offset_t and qore_size_t where
	  appropriate instead of "int"
	* fixed some bugs in QoreSocket::send(int fd, qore_offset_t size)

2008.11.06: David Nichols
	* fixed a setting the URL in the HTTPClient class with only a path if a
	  hostname is already set

2008.11.05: David Nichols
	* fixed a memory error parsing expressions with the map operator
	* event subsystem fixes and improvements, FtpClient event support
	* implemented module and feature version requirements; you can now use:
	  %requires <module> OP <version>, where OP is one of <, <=, =, >=, >,
	  for example: %requires oracle >= 1.0.1
	  also a special feature "qore" was implemented to give a requirement
	  for the qore library, ex: %requires qore >= 0.7.1 

2008.11.04: David Nichols
	* fixed a bug in QoreString::set()
 	* fixed 2 crashing bugs in Operator.cc with the "-" operator: the
	  operator functions were expecting certain arguments but the operator
	  code was making partial matches and sending other types to the
	  functions.  Added the abilty for an operator function to require an
	  exact argument match for both arguments.
	* added the possibilty to define a default function that returns
	  NOTHING if no partial match is made to any operator functions so
	  that nonsensical results are not returned (i.e. before change:
	  NOTHING - NOTHING produced: "<time: 0 seconds>", after change, this
	  produces "NOTHING")

2008.11.03: David Nichols
	* fixed a crashing bug in the FtpClient class
	* fixed a parsing bug with the switch statement when a case value using
	  a constant was not resolved caused a crash: affected debug mode only

2008.10.30: David Nichols
	* updated module handling: modules are now checked for having the
	  module api appended to their name in descending order; i.e. if qore
	  supports module-apis 0.5 and 0.4, and a program requests feature
	  "x", qore will look for x-api-0.5.qmod, then x-api-0.4.qmod, and